--- a/apps/app-root/Dockerfile
+++ b/apps/app-root/Dockerfile
@@ -1,3 +1,5 @@
+# docker build -q -t ${appname} .
+
 FROM node:latest as build-stage
 LABEL autodelete="true"
 WORKDIR /app
@@ -7,6 +9,6 @@ COPY ./ .
 RUN npm run build
 
 FROM nginx as production-stage
-RUN mkdir /app
-COPY --from=build-stage /app/dist /app
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build-stage /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
